# elec3848_dogbot

./: .gitignore  README.md  attach.sh  build.sh  build_desktop.sh  compose.sh  detectnet.py  detectnet_20210723_USB.py  doc.md  docker-compose.yml  dogbot_client.py  local_client.py  mputest.py  ros_noetic_slam.dockerfile  serv.sh  setup.sh  setup_udev.sh  start_slam.sh  test.py
.devcontainer/: Robotics.code-profile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml
Docker/: Dockerfile  arm64v8.dockerfile  desktop.dockerfile  humble-dev.Dockerfile  humble.dockerfile  ros.dockerfile
Docker/scripts/: build.sh  build_package.sh  install.sh  install_library.sh  install_tool.sh
Docker/utils/: build.sh  install.sh  setup.sh
amd64/: Dockerfile  docker-compose.yml  gazebo.Dockerfile  humble.Dockerfile
amd64/docker/: Dockerfile
arm64/: Dockerfile  docker-compose.yml  ros-desktop-arm64v8.dockerfile
arm64/docker/: Dockerfile
arm64v8/: Dockerfile  docker-compose.yml
arm_control/: detectnet.py  local_client.py
container/: .gitignore  .gitmodules  README.md  docker-compose.yml
container/Docker/: Dockerfile
container/Docker/utils/: build.sh
container/tools/: attach.sh
dogbot_arm/: package.xml  setup.cfg  setup.py
dogbot_arm/dogbot_arm/: doc.md
dogbot_arm_controller/: CMakeLists.txt  dogbot_arm_controller_plugin.xml  package.xml
dogbot_arm_controller/include/dogbot_arm_controller/: dogbot_arm_controller.hpp  visibility_control.h
dogbot_arm_controller/include/dogbot_drive_controller/: dogbot_arm_controller.hpp
dogbot_arm_controller/src/: dogbot_arm_controller.cpp  dogbot_arm_controller_parameter.yaml
dogbot_bringup/: package.xml
dogbot_bringup/config/: slam.yaml
dogbot_bringup/launch/: dogbot.grab.launch.py  dogbot.launch.py  dogbot.navigation.launch.py  icm20948.launch.py  imu.launch.py  mpu6050.launch.py  slam.launch.py  teleop.launch.py
dogbot_camera/: package.xml  setup.cfg  setup.py
dogbot_camera/ssd/: Terminal_commands.txt  detectnet_20210723_USB.py  dogbot_client.py
dogbot_description/: package.xml
dogbot_description/dogbot/rviz/: dogbot.rviz
dogbot_drive/: CMakeLists.txt  dogbot_drive.xml  package.xml
dogbot_drive/hardware/: dogbot_system.cpp
dogbot_drive_controller/: CMakeLists.txt
dogbot_drive_controller/include/dogbot_drive_controller/: dogbot_drive_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
dogbot_drive_controller/src/: dogbot_drive_controller.cpp  dogbot_drive_controller_parameter.yaml  odometry.cpp  speed_limiter.cpp
dogbot_hardware/: CMakeLists.txt  dogbot_hardware.xml  package.xml
dogbot_hardware/bringup/config/: dogbot_controllers.yaml  ekf_filter.yaml  navigation.yaml  slam.yaml
dogbot_hardware/bringup/launch/: dogbot.launch.py  imu.launch.py  slam.launch.py  slam_launch.py
dogbot_hardware/description/launch/: view_robot.launch.py
dogbot_hardware/description/ros2_control/: dogbot.ros2_control.xacro
dogbot_hardware/description/urdf/: dogbot.urdf.xacro
dogbot_hardware/hardware/: dogbot_system.cpp
dogbot_hardware/hardware/include/dogbot_drive/: dogbot_system.hpp  serial_comms.hpp  visibility_control.h
dogbot_hardware/hardware/include/dogbot_hardware/: dogbot_system.hpp  serial.hpp  serial_comms.hpp  servo.hpp  sonar.hpp  wheel.hpp
dogbot_imu/: package.xml  setup.py
dogbot_imu/dogbot_imu/: icm20498.py  mpu6050.py  publisher.py
dogbot_interfaces/: CMakeLists.txt  package.xml
dogbot_interfaces/msg/: ArmPosition.msg  ServoPosition.msg
dogbot_server/: package.xml  setup.py
dogbot_server/dogbot_server/: dogbot_client.py  dogbot_server.py  server.py
dogbot_servo_controller/: CMakeLists.txt  dogbot_servo_controller_plugin.xml  package.xml
dogbot_servo_controller/include/dogbot_servo_controller/: dogbot_servo_controller.hpp  visibility_control.h
dogbot_servo_controller/src/: dogbot_arm_controller.cpp  dogbot_arm_controller_parameter.yaml  dogbot_servo_controller.cpp  dogbot_servo_controller_parameter.yaml
dogbot_voice/: setup.cfg  setup.py
firmware/src/: main.cpp
include/: MotorController.hpp  ServoController.hpp  Sonar.hpp
ros-humble-dev/: .gitignore  docker-compose.yml
ros-humble-dev/docker/: Dockerfile  build.sh  ydlidar_build.sh
ros-noetic-dev/: docker-compose.yml
ros-noetic-dev/docker/: Dockerfile  ydlidar_build.sh
ros-noetic-dev/scripts/: initenv.sh
scripts/: build.sh  build_package.sh  install_desktop.sh  install_gazebo.sh  install_library.sh  install_platformio.sh  install_tool.sh  nvidia_container_tool.sh  udev.sh
software/: .gitignore
software/arm_control/: dogbot_client.py
software/dogbot_bringup/: CMakeLists.txt
software/dogbot_description/: package.xml
software/dogbot_drive_controller/: CMakeLists.txt
software/dogbot_imu/: setup.cfg  setup.py
software/dogbot_server/: setup.cfg
software/stamp_adder/: LICENSE  package.xml  setup.py
software/tools/: publish_servo.sh  publish_velocity.sh  teleop.sh
src/: main.cpp
src/dogbot_arduino/: CMakeLists.txt  dogdrive_arduino.xml  package.xml
src/dogbot_arduino/bringup/config/: dogbot_controllers.yaml
src/dogbot_arduino/bringup/launch/: dogbot.launch.py
src/dogbot_arduino/description/launch/: view_robot.launch.py
src/dogbot_arduino/description/ros2_control/: dogbot.ros2_control.xacro
src/dogbot_arduino/description/urdf/: dogbot.urdf.xacro
src/dogbot_arduino/hardware/: dogbot_system.cpp
src/dogbot_arduino/hardware/include/dogdrive_arduino/: arduino_comms.hpp  dogbot_system.hpp  visibility_control.h  wheel.hpp
src/dogbot_description/: CMakeLists.txt
src/dogbot_drive/: CMakeLists.txt
src/dogbot_drive/bringup/config/: dogbot_controllers.yaml
src/dogbot_drive/description/urdf/: dogbot.urdf.xacro
src/dogbot_drive/hardware/include/dogbot_drive/: dogbot_system.hpp  wheel.hpp
src/dogbot_drive_arduino/: CMakeLists.txt  dogbot_drive_arduino.xml  package.xml
src/dogbot_voice/: package.xml
stamp_adder/: setup.cfg  setup.py
stamp_adder/stamp_adder/: stamp_adder.py
tools/: publish_servo.sh  publish_velocity.sh  setup_udev.sh  teleop.sh
(+41 files in other folders)
