<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dogbot_imu</name>
  <version>1.0.0</version>
  <description>IMU talker node for publishing ICM-20948 messages.</description>
  <maintainer email="foah@connect.hku.hk">Long Liangmao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>qwiic_icm20948</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
