<?xml version="1.0"?>
<package format="3">
  <name>dogbot_servo_controller</name>
  <version>1.0.0</version>
  <description>Controller for the dogbot's servo.</description>

  <maintainer email="foah@connect.hku.hk">Long Liangmao</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>dogbot_interfaces</depend>
  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
